--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -22,11 +22,12 @@ login.name=Username
 login.password=Password
 login.remember=Remember password
 login.auto=Automatic login
-login.create=Create new account
+login.create=New Account
 login.rename=Rename account
-login.forgot=Forgot login or password
+login.forgot=Forgot login
 login.button.login=Login
 login.button.cancel=Cancel
+login.failed.title=Login failed
 login.failed.message=Login failed. Please check your username/password.
 login.progress.message=Logging in\u2026
 
