Starting with game tab

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -8,13 +8,15 @@ menu.help=Help
 main.whatsNew=What's new?
 main.chatLobby=Chat Lobby
 main.coopMissions=Coop Missions
-main.findGames=Find games
+main.games=Games
 main.tutorials=Tutorials
 main.leaderboards=Leaderboards
 main.tournaments=Tournaments
 main.livestreams=Livestreams
 main.replays=Replays
 main.vaults=Vaults
+
+games.ladder.description=Play ladder:
 
 login.title=FA Forever Login
 login.header=Welcome back, commander
