* Window decoration * Resizable window * Draggable window * Listing open games

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -17,6 +17,14 @@ main.replays=Replays
 main.vaults=Vaults
 
 games.ladder.description=Play ladder:
+games.create=Create game
+
+game.title=Title
+game.players=Players
+game.map=Map
+game.ranking=Ranking
+game.mods=Mods
+game.players.format=%1$s/%2$s
 
 login.title=FA Forever Login
 login.header=Welcome back, commander
