* Relay server exchanges data between FA and FAF

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -29,6 +29,7 @@ game.map=Map
 game.ranking=Ranking
 game.mods=Mods
 game.players.format=%1$s/%2$s
+game.detail.players.format=%1$s/%2$s players
 game.passwordHint=Password (Optional)
 game.join=Join
 
