Improved merging of irc/faf users

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -16,7 +16,13 @@ main.livestreams=Livestreams
 main.replays=Replays
 main.vaults=Vaults
 
-chat.messagePrompt=Type a message...
+statusbar.nat=NAT
+statusbar.connected=Connected
+statusbar.connecting=Connecting\u2026
+statusbar.disconnected=Connection error
+
+chat.messagePrompt=Type a message\u2026
+chat.searchPrompt=Search\u2026
 
 games.create=Create game
 game.create.map=Map (can be changed later)
