Introducing non-working chat categories

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -23,6 +23,11 @@ statusbar.disconnected=Connection error
 
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
+chat.category.moderators=Moderators
+chat.category.friends=Friends
+chat.category.foes=Foes
+chat.category.others=Others
+chat.category.irc=IRC
 
 games.create=Create game
 game.create.map=Map (can be changed later)
