Starting with user context menu

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -28,6 +28,7 @@ chat.category.friends=Friends
 chat.category.foes=Foes
 chat.category.others=Others
 chat.category.irc=IRC
+chat.userContext.info=View player info
 
 games.create=Create game
 game.create.map=Map (can be changed later)
