Games seem to work, even in multiplayer

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -28,7 +28,17 @@ chat.category.friends=Friends
 chat.category.foes=Foes
 chat.category.others=Others
 chat.category.irc=IRC
-chat.userContext.info=View player info
+chat.userContext.userInfo=Show user info
+chat.userContext.privateMessage=Send private message
+chat.userContext.addFriend=Add friend
+chat.userContext.removeFriend=Remove friend
+chat.userContext.addFoe=Add foe
+chat.userContext.removeFoe=Remove foe
+chat.userContext.viewLiveReplay=View live replay
+chat.userContext.viewReplays=View replays
+chat.userContext.inviteToGame=Invite to game
+chat.userContext.kick=Kick\u2026
+chat.userContext.ban=Ban\u2026
 
 games.create=Create game
 game.create.map=Map (can be changed later)
