Chat users are now properly merged with data from FAF server and displayed in the correct panes

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -27,7 +27,7 @@ chat.category.moderators=Moderators
 chat.category.friends=Friends
 chat.category.foes=Foes
 chat.category.others=Others
-chat.category.irc=IRC
+chat.category.irc=IRC only
 chat.userContext.userInfo=Show user info
 chat.userContext.privateMessage=Send private message
 chat.userContext.addFriend=Add friend
