Lots of stuff, including; * Chat users now displayed correctly in the proper pane * Sending and receiving private messages * New navigation

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -5,16 +5,11 @@ menu.application.close=Close
 menu.options=Options
 menu.help=Help
 
-main.whatsNew=What's new?
-main.chatLobby=Chat Lobby
-main.coopMissions=Coop Missions
+main.news=News
+main.chat=Chat
 main.games=Games
-main.tutorials=Tutorials
-main.leaderboards=Leaderboards
-main.tournaments=Tournaments
-main.livestreams=Livestreams
-main.replays=Replays
-main.vaults=Vaults
+main.vault=Vault
+main.leaderboard=Leaderboard
 
 statusbar.nat=NAT
 statusbar.connected=Connected
@@ -69,5 +64,19 @@ login.button.cancel=Cancel
 login.failed.title=Login failed
 login.failed.message=Login failed. Please check your username/password.
 login.progress.message=Logging in\u2026
+
+vault.maps=Maps
+vault.mods=Mods
+vault.tutorials=Tutorials
+vault.replays=Replays
+
+map.name=Name
+map.size=Size
+map.creator=Creator
+
+tutorial.map=Map
+tutorial.title=Title
+tutorial.length=Length
+tutorial.description=Description
 
 irc.connecting.message=Connecting to IRC\u2026
