Lots of stuff, including: * Mock services to run offline * Binary patching * README.md

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -2,7 +2,7 @@ menu.application=Application
 menu.application.login=Login
 menu.application.connect=Connect
 menu.application.close=Close
-menu.options=Options
+menu.settings=Settings
 menu.help=Help
 
 main.news=News
@@ -80,3 +80,9 @@ tutorial.length=Length
 tutorial.description=Description
 
 irc.connecting.message=Connecting to IRC\u2026
+
+patch.updateAvailable.title=Update available
+patch.updateAvailable.header=A game update is available
+patch.updateAvailable.content=Would you like to install this update now?
+patch.updateAvailable.updateNow=Update now
+patch.updateAvailable.updateLater=Update later
