* Design improvements * Coloring own name in chat * Allowing /me actions

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -1,7 +1,9 @@
-menu.application=Application
-menu.application.login=Login
-menu.application.connect=Connect
-menu.application.close=Close
+menu.login=Login
+menu.connect=Connect
+menu.support=Support
+menu.feedback=Feedback
+menu.logOut=Log out
+menu.exit=Exit
 menu.settings=Settings
 menu.help=Help
 
