Few refactoring, fixed height of "new game dialog", double click to join games? (untested)

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -38,14 +38,14 @@ chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
 
 games.create=Create game
-game.create.map=Map (can be changed later)
-game.mod=Mod
 games.showPrivateGames=Show private games
+game.create.map=Map (can be changed later)
 
 game.title=Title
 game.players=Players
 game.map=Map
 game.ranking=Ranking
+game.type=Type
 game.mods=Mods
 game.players.format=%1$s/%2$s
 game.detail.players.format=%1$s/%2$s players
