Renaming leaderboard to ladder

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -11,7 +11,7 @@ main.news=News
 main.chat=Chat
 main.games=Games
 main.vault=Vault
-main.leaderboard=Leaderboard
+main.ladder=Ladder
 
 statusbar.nat=NAT
 statusbar.connected=Connected
