--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -41,12 +41,14 @@ games.create=Create game
 games.showPrivateGames=Show private games
 game.create.map=Map (can be changed later)
 
+
 game.title=Title
 game.players=Players
 game.map=Map
 game.ranking=Ranking
 game.type=Type
 game.mods=Mods
+games.cancel=Cancel
 game.players.format=%1$s/%2$s
 game.detail.players.format=%1$s/%2$s players
 game.passwordHint=Password (Optional)
