Fixing map vault parser; turning HTML into XML using Tidy.

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -75,7 +75,11 @@ vault.tutorials=Tutorials
 vault.replays=Replays
 
 map.name=Name
+map.description=Description
 map.size=Size
+map.plays=Plays
+map.rating=Rating
+map.downloads=Downloads
 map.creator=Creator
 
 tutorial.map=Map
