working on task queue

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -13,10 +13,14 @@ main.games=Games
 main.vault=Vault
 main.ladder=Ladder
 
-statusbar.nat=NAT
-statusbar.connected=Connected
-statusbar.connecting=Connecting\u2026
-statusbar.disconnected=Connection error
+statusBar.portReachable=Port check OK
+statusBar.portUnreachable=Port check failed
+statusBar.ircConnected=IRC connected
+statusBar.ircConnecting=Connecting to IRC\u2026
+statusBar.ircDisconnected=Connecting to IRC\u2026
+statusBar.fafConnected=FAF connected
+statusBar.fafConnecting=Connecting to FAF\u2026
+statusBar.fafDisconnected=FAF disconnected
 
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
