* Hello fancy status bar * Ability to display one task in status bar * Status bar style fixes pending

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -21,6 +21,13 @@ statusBar.ircDisconnected=Connecting to IRC\u2026
 statusBar.fafConnected=FAF connected
 statusBar.fafConnecting=Connecting to FAF\u2026
 statusBar.fafDisconnected=FAF disconnected
+statusBar.changePort=Change port
+statusBar.enableUpnp=Enable UPnP
+statusBar.retry=Retry
+statusBar.help=Help
+statusBar.reconnect=Reconnect
+statusBar.checkingPort=Checking port\u2026
+statusBar.portCheckTooltip=Tells you whether your game port (%s) is reachable from the outside.
 
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
@@ -40,6 +47,8 @@ chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
 chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
+chat.sendMessageTask.title=Sending chat message\u2026
+chat.sendActionTask.title=Sending chat action\u2026
 
 games.create=Create game
 games.showPrivateGames=Show private games
@@ -98,3 +107,11 @@ patch.updateAvailable.header=A game update is available
 patch.updateAvailable.content=Would you like to install this update now?
 patch.updateAvailable.updateNow=Update now
 patch.updateAvailable.updateLater=Update later
+
+patchTask.title=Downloading patches\u2026
+updateCheckTask.title=Checking for updates\u2026
+portCheckTask.title=Checking port reachability\u2026
+requestNewGameTask.title=Hosting a new game\u2026
+requestJoinGameTask.title=Joining game\u2026
+readMapVaultTask.title=Reading map vault\u2026
+readLadderTask.title=Reading ladder\u2026
