Fixing data in map vault

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -94,6 +94,8 @@ map.plays=Plays
 map.rating=Rating
 map.downloads=Downloads
 map.creator=Creator
+map.players=Players
+map.version=Version
 
 tutorial.map=Map
 tutorial.title=Title
