* Trying to detect game directory * Preparing notifications * Fixing login window font sizes

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -117,3 +117,7 @@ requestNewGameTask.title=Hosting a new game\u2026
 requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
 readLadderTask.title=Reading ladder\u2026
+
+missingGamePath.notification=Forged Alliance could not be located
+missingGamePath.locateAction=Locate\u2026
+missingGamePath.chooserTitle=Locate Forged Alliance directory
