--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -27,7 +27,7 @@ statusBar.retry=Retry
 statusBar.help=Help
 statusBar.reconnect=Reconnect
 statusBar.checkingPort=Checking port\u2026
-statusBar.portCheckTooltip=Tells you whether your game port (%s) is reachable from the outside.
+statusBar.portCheckTooltip=Tells you whether your game port ({0,number,#}) is reachable from the outside.
 
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
@@ -62,8 +62,8 @@ game.ranking=Ranking
 game.type=Type
 game.mods=Mods
 games.cancel=Cancel
-game.players.format=%1$s/%2$s
-game.detail.players.format=%1$s/%2$s players
+game.players.format={0,number,#}/{1,number,#}
+game.detail.players.format={0,number,#}/{1,number,#} players
 game.passwordHint=Password (Optional)
 game.join=Join
 
@@ -112,12 +112,19 @@ patch.updateAvailable.updateLater=Update later
 
 patchTask.title=Downloading patches\u2026
 updateCheckTask.title=Checking for updates\u2026
-portCheckTask.title=Checking port reachability\u2026
 requestNewGameTask.title=Hosting a new game\u2026
 requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
 readLadderTask.title=Reading ladder\u2026
 
+portCheckTask.title=Checking port reachability\u2026
+portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachable
+portCheckTask.neverShowAgain=Never show again
+portCheckTask.help=Help
+portCheckTask.retry=Retry
+
 missingGamePath.notification=Forged Alliance could not be located
 missingGamePath.locateAction=Locate\u2026
 missingGamePath.chooserTitle=Locate Forged Alliance directory
+
+notifications.empty=You don't have any notifications
