--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -52,8 +52,17 @@ chat.sendActionTask.title=Sending chat action\u2026
 
 games.create=Create game
 games.showPrivateGames=Show private games
-game.create.map=Map (can be changed later)
 
+game.create.map=Map (can be changed later)
+game.create.title=Title (required)
+game.create.password=Password (Optional)
+game.create.randomMap=Random map
+game.create.ranking=Desired ranking
+game.create.additionalMods=Additional mods
+game.create.noMods=Deselect all
+game.create.type=Game type
+game.create.create=Create
+game.create.searchMap=Search\u2026
 
 game.title=Title
 game.players=Players
@@ -61,10 +70,8 @@ game.map=Map
 game.ranking=Ranking
 game.type=Type
 game.mods=Mods
-games.cancel=Cancel
 game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
-game.passwordHint=Password (Optional)
 game.join=Join
 
 login.title=FA Forever Login
