--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -73,6 +73,7 @@ game.mods=Mods
 game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
+game.host=Host
 
 login.title=FA Forever Login
 login.header=Welcome back, commander
