--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -75,6 +75,8 @@ game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
 game.host=Host
 
+game.join.passwordHint=Password
+
 login.title=FA Forever Login
 login.header=Welcome back, commander
 login.name=Username
