* "Access" column in games table * Asking for password on game join * Remembering last map

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -74,6 +74,7 @@ game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
 game.host=Host
+game.access=Access
 
 game.join.passwordHint=Password
 
