Allowing to select game path

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -115,11 +115,17 @@ tutorial.description=Description
 
 irc.connecting.message=Connecting to IRC\u2026
 
-patch.updateAvailable.title=Update available
-patch.updateAvailable.header=A game update is available
-patch.updateAvailable.content=Would you like to install this update now?
-patch.updateAvailable.updateNow=Update now
-patch.updateAvailable.updateLater=Update later
+faUpdateAvailable.notification=A Forged Alliance update is available
+faUpdateAvailable.updateNow=Update now
+faUpdateAvailable.updateLater=Update later
+
+faUpdateSucceeded.notification=Forged Alliance has been updated
+
+updateCheckFailed.notification=Could not check for updates
+updateCheckFailed.retry=Retry
+
+updateFailed.notification=Update failed
+updateFailed.retry=Retry
 
 patchTask.title=Downloading patches\u2026
 updateCheckTask.title=Checking for updates\u2026
@@ -135,7 +141,7 @@ portCheckTask.help=Help
 portCheckTask.retry=Retry
 
 missingGamePath.notification=Forged Alliance could not be located
-missingGamePath.locateAction=Locate\u2026
+missingGamePath.locate=Locate\u2026
 missingGamePath.chooserTitle=Locate Forged Alliance directory
 
 notifications.empty=You don't have any notifications
