Trying to get user statistics; not yet working.

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -145,3 +145,5 @@ missingGamePath.locate=Locate\u2026
 missingGamePath.chooserTitle=Locate Forged Alliance directory
 
 notifications.empty=You don't have any notifications
+
+playerInfo.rating90Days=Rating over 90 days
