--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -133,6 +133,7 @@ requestNewGameTask.title=Hosting a new game\u2026
 requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
 readLadderTask.title=Reading ladder\u2026
+mapDownloadTask.title=Downloading map {}\u2026
 
 portCheckTask.title=Checking port reachability\u2026
 portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachable
