Transparent and searchable ladder

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -76,7 +76,12 @@ game.join=Join
 game.host=Host
 game.access=Access
 
-game.join.passwordHint=Password
+game.join.passwordPrompt=Password
+
+ladder.byRating=By rating
+ladder.byMap=By map
+ladder.byRank=By rank
+ladder.searchPrompt=Search\u2026
 
 login.title=FA Forever Login
 login.header=Welcome back, commander
