Removing ladder slider; replacing with search

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -81,7 +81,7 @@ game.join.passwordPrompt=Password
 ladder.byRating=By rating
 ladder.byMap=By map
 ladder.byRank=By rank
-ladder.searchPrompt=Search\u2026
+ladder.searchPrompt=Search rank or player\u2026
 
 login.title=FA Forever Login
 login.header=Welcome back, commander
