News as cards; going to change it after commit :P

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -29,6 +29,8 @@ statusBar.reconnect=Reconnect
 statusBar.checkingPort=Checking port\u2026
 statusBar.portCheckTooltip=Tells you whether your game port ({0,number,#}) is reachable from the outside.
 
+news.authoredFormat={0} on {1,date}
+
 chat.messagePrompt=Type a message\u2026
 chat.searchPrompt=Search\u2026
 chat.category.moderators=Moderators
