Trying to get replay recording working

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -155,3 +155,5 @@ missingGamePath.chooserTitle=Locate Forged Alliance directory
 notifications.empty=You don't have any notifications
 
 playerInfo.rating90Days=Rating over 90 days
+
+replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
