Reading local replay files and display them in a treetable

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -115,6 +115,19 @@ map.creator=Creator
 map.players=Players
 map.version=Version
 
+replays.loadingLocalTask.title=Loading local replays\u2026
+replays.loadingLocalTask.failed=Local replays could not be loaded.
+replays.localReplays=Local replays
+replays.onlineReplays=Online replays
+
+replay.id=ID
+replay.title=Title
+replay.players=Players
+replay.time=When
+replay.duration=Duration
+replay.gameType=Mods
+replay.map=Map
+
 tutorial.map=Map
 tutorial.title=Title
 tutorial.length=Length
@@ -157,3 +170,20 @@ notifications.empty=You don't have any notifications
 playerInfo.rating90Days=Rating over 90 days
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
+replayServer.retry=Retry
+
+corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
+corruptedReplayFiles.show=Show
+
+duration.seconds={0,number,#}s
+duration.minutesSeconds={0,number,#}min {0,number,#}s
+duration.hourMinutes={0,number,#}h {0,number,#}min
+vsSeparator=\u0020vs\u0020
+textSeparator=,\u0020
+datePattern=dd.MM.uuuu
+secondsAgo={0,number,#} seconds ago
+minutesAgo={0,number,#} minutes ago
+hoursAgo={0,number,#} hours ago
+daysAgo={0,number,#} days ago
+monthsAgo={0,number,#} months ago
+yearsAgo={0,number,#} years ago
