* Chat window no longer scrolls to bottom if scrolled up * Hovering over user names in the chat view shows their country flag, name and ranking

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -9,7 +9,7 @@ menu.help=Help
 
 main.news=News
 main.chat=Chat
-main.games=Play
+main.games=Games
 main.vault=Vault
 main.ladder=Ladder
 
@@ -168,6 +168,7 @@ missingGamePath.chooserTitle=Locate Forged Alliance directory
 notifications.empty=You don't have any notifications
 
 playerInfo.rating90Days=Rating over 90 days
+playerInfoTooltipFormat={0} ({1,number,#})
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
 replayServer.retry=Retry
