Extracting clan tag format to properties file

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -51,6 +51,7 @@ chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
+chat.clanTagFormag=[{0}]
 
 games.create=Create game
 games.showPrivateGames=Show private games
