Refactoring setting to properties an added a UI stub

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -189,3 +189,32 @@ hoursAgo={0,number,#} hours ago
 daysAgo={0,number,#} days ago
 monthsAgo={0,number,#} months ago
 yearsAgo={0,number,#} years ago
+
+settings.windowTitle=Settings
+settings.general=General
+settings.general.language=Language
+settings.general.rememberLastTab=Remember my last tab
+settings.chat=Chat
+settings.chat.maxMessages=Maximum number of messages to buffer
+settings.chat.previews=Preview
+settings.chat.previewImages=Preview image URLs on mouse over
+settings.notifications=Notifications
+settings.notifications.reset=Reset dismissed notifications
+settings.notifications.toasts=Toasts
+settings.notifications.enableToasts=Enable toasts
+settings.notifications.toastPosition=Toast position
+settings.notifications.toastScreen=Screen
+settings.notifications.displayToast=Display toast
+settings.notifications.playSound=Play sound
+settings.notifications.pmReceived=PM received
+settings.sounds=Sounds
+settings.sounds.enable=Enable sounds
+settings.fa.title=Forged Alliance Forever
+settings.fa.autoDownloadMaps=Download missing maps automatically
+settings.general.theme=Theme
+settings.notifications.friendOnline=Friend online
+settings.notifications.friendJoinsGame=Friend joins game
+settings.notifications.friendPlaysGame=Friend plays game
+settings.notifications.friendOffline=Friend offline
+settings.fa.gamePort=Game port
+settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
