90 days and 365 days statistics

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -168,7 +168,9 @@ missingGamePath.chooserTitle=Locate Forged Alliance directory
 
 notifications.empty=You don't have any notifications
 
-playerInfo.rating90Days=Rating over 90 days
+playerInfo.ratingOverTime=Rating over time
+playerInfo.ratingOverTime.last3Months=Last 3 months
+playerInfo.ratingOverTime.lastYear=Last year
 playerInfoTooltipFormat={0} ({1,number,#})
 
 replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
