Replays almost working (FAF can't read it yet however, but the file looks good)

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -155,6 +155,7 @@ requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
 readLadderTask.title=Reading ladder\u2026
 mapDownloadTask.title=Downloading map {0}\u2026
+mapReplayTask.title=Downloading replay {0}\u2026
 
 portCheckTask.title=Checking port reachability\u2026
 portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachable
@@ -178,6 +179,9 @@ replayServer.retry=Retry
 
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
+
+replayCouldNotBeStarted=Replay {0} could not be started. See the log for details.
+replayCouldNotBeDownloaded=Replay {0,number,#} could not be downloaded. See the log for details.
 
 duration.seconds={0,number,#}s
 duration.minutesSeconds={0,number,#}min {0,number,#}s
