Improvements in replay vault

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -116,6 +116,8 @@ map.creator=Creator
 map.players=Players
 map.version=Version
 
+replays.loadingOnlineTask.title=Loading online replays\u2026
+replays.loadingOnlineTask.failed=Online replays could not be loaded.
 replays.loadingLocalTask.title=Loading local replays\u2026
 replays.loadingLocalTask.failed=Local replays could not be loaded.
 replays.localReplays=Local replays
@@ -224,3 +226,5 @@ settings.notifications.friendPlaysGame=Friend plays game
 settings.notifications.friendOffline=Friend offline
 settings.fa.gamePort=Game port
 settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
+
+report=Report
