Game cards and tooltips fully working, css of tooltip needs to be adjusted, join game and scrollbar needs to be created

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -78,6 +78,9 @@ game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
 game.host=Host
 game.access=Access
+game.popup.teamTitle=Team {0,number,#}
+game.popup.teamTitleNoTeam=No Team
+game.popup.observers=Observers
 
 game.join.passwordPrompt=Password
 
