--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -52,6 +52,7 @@ chat.userContext.ban=Ban\u2026
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
 chat.clanTagFormag=[{0}]
+chat.imageUploadTask.title=Uploading image\u2026
 
 games.create=Create game
 games.showPrivateGames=Show private games
