Previewing images in chat

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -229,3 +229,5 @@ settings.fa.gamePort=Game port
 settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
 
 report=Report
+
+urlPreviewDescription={0} ({1})
