Renaming "ladder" to "leaderboard"

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -11,7 +11,7 @@ main.news=News
 main.chat=Chat
 main.games=Games
 main.vault=Vault
-main.ladder=Ladder
+main.leaderboard=Leaderboard
 
 statusBar.portReachable=Port check OK
 statusBar.portUnreachable=Port check failed
