Alert dialog stubs

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -61,7 +61,7 @@ game.create.map=Map (can be changed later)
 game.create.title=Title (required)
 game.create.password=Password (Optional)
 game.create.randomMap=Random map
-game.create.ranking=Desired ranking
+game.create.rating=Desired rating
 game.create.additionalMods=Additional mods
 game.create.noMods=Deselect all
 game.create.type=Game type
@@ -71,12 +71,18 @@ game.create.searchMap=Search\u2026
 game.title=Title
 game.players=Players
 game.map=Map
-game.ranking=Ranking
+game.rating=Rating
+game.ratingFormat.minOnly=>={0,number,#}
+game.ratingFormat.maxOnly=<={0,number,#}
+game.ratingFormat.minMax={0,number,#} - {1,number,#}
+game.joinGameRatingConfirmation.title=Rating out of bounds
+game.joinGameRatingConfirmation.text=This game is for players with a rating between {0,number,#} and {1,number,#}, your current rating however is {2,number,#}.\n\nAre you sure you want to join?
 game.type=Type
 game.mods=Mods
 game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
+login.cancel=Cancel
 game.host=Host
 game.access=Access
 game.popup.teamTitle=Team {0,number,#}
