"Rating out of bounds" notification

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -82,7 +82,7 @@ game.mods=Mods
 game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
-login.cancel=Cancel
+game.cancel=Cancel
 game.host=Host
 game.access=Access
 game.popup.teamTitle=Team {0,number,#}
