Semi functional comment cards, html comment parser

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -194,7 +194,7 @@ duration.minutesSeconds={0,number,#}min {0,number,#}s
 duration.hourMinutes={0,number,#}h {0,number,#}min
 vsSeparator=\u0020vs\u0020
 textSeparator=,\u0020
-datePattern=dd.MM.uuuu
+datePattern={0,number,#}/{1,number,#}/{2,number,#}
 secondsAgo={0,number,#} seconds ago
 minutesAgo={0,number,#} minutes ago
 hoursAgo={0,number,#} hours ago
