Community hub stub

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -8,6 +8,7 @@ menu.settings=Settings
 menu.help=Help
 
 main.community=Community
+main.community.hub=Hub
 main.community.news=News
 main.community.casts=Casts
 main.chat=Chat
@@ -20,6 +21,8 @@ main.vault.mods=Mods
 main.vault.replays=Replays
 main.leaderboard=Leaderboard
 main.leaderboard.ranked1v1=1v1 ranked matches
+
+hub.concurrentFafUsers48h=Concurrent FAF users (most recent 48h)
 
 statusBar.portReachable=Port check OK
 statusBar.portUnreachable=Port check failed
