Code review fixes

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -1,4 +1,4 @@
-menu.login=Login
+4menu.login=Login
 menu.connect=Connect
 menu.support=Support
 menu.feedback=Feedback
@@ -211,7 +211,7 @@ duration.minutesSeconds={0,number,#}min {0,number,#}s
 duration.hourMinutes={0,number,#}h {0,number,#}min
 vsSeparator=\u0020vs\u0020
 textSeparator=,\u0020
-datePattern={0,number,#}/{1,number,#}/{2,number,#}
+datePattern=dd.MM.uuuu
 secondsAgo={0,number,#} seconds ago
 minutesAgo={0,number,#} minutes ago
 hoursAgo={0,number,#} hours ago
