1v1 buttons in status bar

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -39,6 +39,7 @@ statusBar.help=Help
 statusBar.reconnect=Reconnect
 statusBar.checkingPort=Checking port\u2026
 statusBar.portCheckTooltip=Tells you whether your game port ({0,number,#}) is reachable from the outside.
+statusBar.rankedMatchNotification=Play 1v1
 
 news.authoredFormat={0} on {1,date}
 
