--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -67,6 +67,9 @@ chat.imageUploadTask.title=Uploading image\u2026
 
 games.create=Create game
 games.showPrivateGames=Show private games
+games.view=View
+games.view.tiles=Tiles
+games.view.table=Table
 
 game.create.map=Map (can be changed later)
 game.create.title=Title (required)
