unit tests for AbstractChatTabController.java

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -1,4 +1,4 @@
-menu.login=Login
+4menu.login=Login
 menu.connect=Connect
 menu.support=Support
 menu.feedback=Feedback
@@ -62,11 +62,14 @@ chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
-chat.clanTagFormag=[{0}]
+chat.clanTagFormat=[{0}]
 chat.imageUploadTask.title=Uploading image\u2026
 
 games.create=Create game
 games.showPrivateGames=Show private games
+games.view=View
+games.view.tiles=Tiles
+games.view.table=Table
 
 game.create.map=Map (can be changed later)
 game.create.title=Title (required)
@@ -136,6 +139,12 @@ map.downloads=Downloads
 map.creator=Creator
 map.players=Players
 map.version=Version
+
+mapPreview.name=Map Name: {0}
+mapPreview.size=Map Size: {0}
+mapPreview.maxPlayers=Max Players: {0,number,#}
+mapPreview.loadFailure.title=Map Preview Load Failure
+mapPreview.loadFailure.message=The map preview has failed to load
 
 replays.loadingOnlineTask.title=Loading online replays\u2026
 replays.loadingOnlineTask.failed=Online replays could not be loaded.
