Implemented join game in chat context menu, added uid to playerinfobean

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -56,6 +56,7 @@ chat.userContext.removeFriend=Remove friend
 chat.userContext.addFoe=Add foe
 chat.userContext.removeFoe=Remove foe
 chat.userContext.viewLiveReplay=View live replay
+chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
 chat.userContext.kick=Kick\u2026
