updated names of gametiled and use localization

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -68,7 +68,7 @@ chat.imageUploadTask.title=Uploading image\u2026
 games.create=Create game
 games.showPrivateGames=Show private games
 games.view=View
-games.view.tiles=Tiles
+games.view.tiled=Tiled
 games.view.table=Table
 
 game.create.map=Map (can be changed later)
