game tooltip cleanup and css fix

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -99,9 +99,9 @@ game.join=Join
 game.cancel=Cancel
 game.host=Host
 game.access=Access
-game.popup.teamTitle=Team {0,number,#}
-game.popup.teamTitleNoTeam=No Team
-game.popup.observers=Observers
+game.tooltip.teamTitle=Team {0,number,#}
+game.tooltip.teamTitleNoTeam=No Team
+game.tooltip.observers=Observers
 
 game.join.passwordPrompt=Password
 
