live replays working, added images for game status

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -153,6 +153,8 @@ replays.loadingLocalTask.title=Loading local replays\u2026
 replays.loadingLocalTask.failed=Local replays could not be loaded.
 replays.localReplays=Local replays
 replays.onlineReplays=Online replays
+replays.live.loadFailure.title=Live Replay Load Failure
+replays.live.loadFailure.message=The live replay has failed to launch
 
 replay.id=ID
 replay.title=Title
