initial implementation of #85 auto update

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -182,6 +182,19 @@ faUpdateAvailable.updateLater=Update later
 
 faUpdateSucceeded.notification=Forged Alliance has been updated
 
+clientUpdateAvailable.notification=Client {0} is available ({1})
+clientUpdateAvailable.downloadAndInstall=Download & install
+clientUpdateAvailable.downloadOnly=Download only
+clientUpdateAvailable.ignore=Ignore
+clientUpdateAvailable.releaseNotes=Release notes
+
+clientUpdateReady.notification=Client {0} is ready for installation
+clientUpdateReady.installNow=Install now
+clientUpdateReady.installLater=Install later
+
+clientUpdateDownloadFailed.notification=Error while downloading client update
+clientUpdateDownloadFailed.retry=Retry
+
 updateCheckFailed.notification=Could not check for updates
 updateCheckFailed.retry=Retry
 
@@ -189,7 +202,9 @@ updateFailed.notification=Update failed
 updateFailed.retry=Retry
 
 patchTask.title=Downloading patches\u2026
-updateCheckTask.title=Checking for updates\u2026
+updateCheckTask.title=Checking for update\u2026
+clientUpdateCheckTask.title=Checking for client update\u2026
+clientUpdateDownloadTask.title=Downloading client update\u2026
 requestNewGameTask.title=Hosting a new game\u2026
 requestJoinGameTask.title=Joining game\u2026
 readMapVaultTask.title=Reading map vault\u2026
