initial implementation of #85 auto update

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -76,7 +76,7 @@ games.create.minRating=Min.
 games.create.maxRating=Max.
 games.showPrivateGames=Show private games
 games.view=View
-games.view.tiled=Tiled
+games.view.tiles=Tiles
 games.view.table=Table
 
 game.create.map=Map (can be changed later)
@@ -183,14 +183,9 @@ faUpdateAvailable.updateLater=Update later
 faUpdateSucceeded.notification=Forged Alliance has been updated
 
 clientUpdateAvailable.notification=Client {0} is available ({1})
-clientUpdateAvailable.downloadAndInstall=Download & install
-clientUpdateAvailable.downloadOnly=Download only
+clientUpdateAvailable.downloadAndInstall=Download
 clientUpdateAvailable.ignore=Ignore
 clientUpdateAvailable.releaseNotes=Release notes
-
-clientUpdateReady.notification=Client {0} is ready for installation
-clientUpdateReady.installNow=Install now
-clientUpdateReady.installLater=Install later
 
 clientUpdateDownloadFailed.notification=Error while downloading client update
 clientUpdateDownloadFailed.retry=Retry
