playerRating tooltip, users in channel, initial gameStatus tooltip pass

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -71,6 +71,7 @@ chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
 chat.clanTagFormat=[{0}]
 chat.imageUploadTask.title=Uploading image\u2026
+chat.userCount={0,number,#} users ... (type to search)
 
 games.create=Create game
 games.create.minRating=Min.
