added gamestatus tooltip

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -72,6 +72,10 @@ chat.sendActionTask.title=Sending chat action\u2026
 chat.clanTagFormat=[{0}]
 chat.imageUploadTask.title=Uploading image\u2026
 chat.userCount={0,number,#} users ... (type to search)
+chat.mapName=Map Name: {0}
+chat.gameStatus.mapName=Map Name: {0}
+chat.gameStatus.gameTitle=Title: {0}
+chat.gameStatus.featuredMod=Featured Mod: {0}
 
 games.create=Create game
 games.create.minRating=Min.
