settings option for prettyColors

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -264,6 +264,8 @@ settings.chat=Chat
 settings.chat.maxMessages=Maximum number of messages to buffer
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
+settings.chat.colors=Colors
+settings.chat.prettyColors=Random pretty colors for other and irc users
 settings.notifications=Notifications
 settings.notifications.reset=Reset dismissed notifications
 settings.notifications.toasts=Toasts
