Improved the way tasks are displayed in the status bare

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -214,6 +214,7 @@ mapReplayTask.title=Downloading replay {0}\u2026
 prepareGameUpdateTask.preparing=Preparing game update\u2026
 downloadingGamePatchTask.downloadingFile=Downloading file {0}\u2026
 updatingGameTask.title=Preparing game update\u2026
+updatingGameTask.updatingFile=Updating file {0,number,#}/{0,number,#}\u2026
 downloadingGamePatchTask.title=Preparing game update\u2026
 downloadingModTask.downloading=Downloading mod {0}\u2026
 downloadingModTask.unzipping=Unzipping mod to {0}\u2026
