Finalizing task refactoring

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -33,7 +33,8 @@ hub.recentForumPosts=Recent forum posts
 hub.mostActivePlayers=Most active players
 
 statusBar.portReachable=Port check OK
-statusBar.portUnreachable=Port check failed
+statusBar.portUnreachable=Port not reachable
+statusBar.portCheckFailed=Port check failed
 statusBar.ircConnected=IRC connected
 statusBar.ircConnecting=Connecting to IRC\u2026
 statusBar.ircDisconnected=Connecting to IRC\u2026
@@ -179,6 +180,8 @@ tutorial.length=Length
 tutorial.description=Description
 
 irc.connecting.message=Connecting to IRC\u2026
+irc.identificationFailed=IRC identification failed: {0}
+irc.registrationFailed=IRC registration failed: {0}
 
 faUpdateAvailable.notification=A Forged Alliance update is available
 faUpdateAvailable.updateNow=Update now
@@ -224,6 +227,7 @@ portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachab
 portCheckTask.neverShowAgain=Never show again
 portCheckTask.help=Help
 portCheckTask.retry=Retry
+portCheckTask.serverUnreachable=Port check server is down. Tell Downlord.
 
 missingGamePath.notification=Forged Alliance could not be located
 missingGamePath.locate=Locate\u2026
