--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -89,6 +89,7 @@ game.create.randomMap=Random map
 game.create.defaultGameType=Select default
 game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
+game.create.reload=Reload
 game.create.create=Create
 game.create.searchMap=Search\u2026
 game.create.gameType=Game type
