--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -24,6 +24,27 @@ main.vault.replays=Replays
 main.leaderboard=Leaderboard
 main.leaderboard.ranked1v1=1v1 ranked matches
 
+ranked1v1.play=Play
+ranked1v1.cancel=Cancel
+ranked1v1.choseFactions.title=Select factions
+ranked1v1.choseFactions.description=When a match starts, one of these will be assigned to you.
+ranked1v1.title=Ranked 1v1 matches
+ranked1v1.description=This is 1v1 matchmaker system. Here you can test your skills against other players in balanced 1v1 matches.
+ranked1v1.rating.title=Your rating
+ranked1v1.rankingDistribution=Rating distribution
+ranked1v1.rankingDistribution.x=Rating
+ranked1v1.rankingDistribution.y=Players
+ranked1v1.ratingProgress.stillLearning=The system is still learning your skill. Play more games to finish the progress.
+ranked1v1.ratingHint.low=Your rating is low. Ask for a trainer to get started with the game basics.
+ranked1v1.ratingHint.moderate=Your rating is moderate. Keep learning the game mechanics to improve.
+ranked1v1.ratingHint.good=Your rating is good. Focus on details to improve.
+ranked1v1.ratingHint.high=Your rating is high. Why not help others to improve?
+ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowledge.
+ranked1v1.gamesPlayed=Games played
+ranked1v1.ranking=Your ranking
+ranked1v1.ratingOver30Days=Your rating over 30 days
+ranked1v1.searching=Searching for opponent\u2026
+
 hub.concurrentFafUsers48h=Concurrent FAF users (most recent 48h)
 hub.upcomingEvents=Upcoming events
 hub.mapOfTheDay=Map of the day
